session: add partitioned tenant changefeed
